deployment-scripts/crc-hosts-modifier-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: crc-host-modifier
  namespace: default # Use a system namespace or your own
spec:
  selector:
    matchLabels:
      name: host-modifier
  template:
    metadata:
      labels:
        name: host-modifier
    spec:
      # This is critical to allow writing to the host filesystem
      hostNetwork: true
      hostPID: true
      containers:
      - name: host-modifier
        image: registry.access.redhat.com/ubi8/ubi-minimal:latest
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
        volumeMounts:
        - name: host-etc-hosts
          mountPath: /workdir/hosts
        - name: host-ca-trust-pem
          mountPath: /workdir/tls-ca-bundle.pem
      volumes:
      - name: host-etc-hosts
        hostPath:
          path: /etc/hosts
          type: File
      - name: host-ca-trust-pem
        hostPath:
          path: /etc/pki/ca-trust/extracted/pem/tls-ca-bundle.pem
          type: File
