deployment-scripts/geoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geofm-geoserver
  labels:
    app.kubernetes.io/name: gfm-geoserver
    app.kubernetes.io/instance: geoserver-vanilla
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gfm-geoserver
      app.kubernetes.io/instance: geoserver-vanilla
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gfm-geoserver
        app.kubernetes.io/instance: geoserver-vanilla
    spec:
      imagePullSecrets:
        - name: us-icr-pull-secret
      securityContext:
        {}
      containers:
        - name: gfm-geoserver
          securityContext:
            {}
          image: docker.osgeo.org/geoserver:2.28.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - mountPath: /opt/geoserver_data
              name: gfm-geoserver-pv-storage
            - name: server-config-override
              mountPath: /opt/config_overrides
      volumes:
        - name: gfm-geoserver-pv-storage
          persistentVolumeClaim:
            claimName: gfm-geoserver-pvc
        - name: server-config-override
          secret:
            secretName: override-server-xml
            items:
              - key: server.xml
                path: server.xml
---
apiVersion: v1
kind: Service
metadata:
  name: geofm-geoserver
  labels:
    app.kubernetes.io/name: gfm-geoserver
    app.kubernetes.io/instance: geoserver-vanilla
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: gfm-geoserver
    app.kubernetes.io/instance: geoserver-vanilla
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: geofm-geoserver
  annotations:
    haproxy.router.openshift.io/timeout: 900s
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: geofm-geoserver
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
